package com.iss.laps.model;

public enum LeaveStatus {
    APPLIED,
    UPDATED,
    APPROVED,
    REJECTED,
    CANCELLED,
    DELETED
}
