package com.iss.laps.model;

public enum Role {
    ROLE_EMPLOYEE,
    ROLE_MANAGER,
    ROLE_ADMIN
}
